--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
+    "react-data-table-component": "^7.5.1",
     "react-dom": "^17.0.2",
     "react-native": "^0.68.2",
     "react-native-web": "^0.17.7",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
