--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^2.14.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.7.0",
+    "@mui/x-data-grid": "^5.11.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.3",
     "@react-native-picker/picker": "^2.4.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-calendar": "^3.7.0",
     "react-data-table-component": "^7.5.1",
     "react-dom": "^17.0.2",
