--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
-    "react-calendar": "^3.7.0",
     "react-data-table-component": "^7.5.1",
+    "react-date-picker": "^8.4.0",
     "react-dom": "^17.0.2",
     "react-native": "^0.68.2",
     "react-native-web": "^0.17.7",
