--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@melacod/react-modal": "^1.0.2",
     "@react-native-picker/picker": "^2.4.1",
     "@reduxjs/toolkit": "^1.8.1",
+    "firebase": "^9.8.1",
     "react": "^17.0.2",
     "react-data-table-component": "^7.5.1",
     "react-date-picker": "^8.4.0",
